// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionSubmissionPageComponent should snap when feedback session questions have failed to load 1`] = `
<tm-session-submission-page
  FeedbackSessionSubmissionStatus={[Function Object]}
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  commentService={[Function FeedbackResponseCommentService]}
  courseId={[Function String]}
  document={[Function Document]}
  feedbackQuestionsService={[Function FeedbackQuestionsService]}
  feedbackResponsesService={[Function FeedbackResponsesService]}
  feedbackSessionInstructions=""
  feedbackSessionName={[Function String]}
  feedbackSessionSubmissionStatus={[Function String]}
  feedbackSessionTimezone=""
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionQuestionsLoadingFailed={[Function Boolean]}
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionLoading={[Function Boolean]}
  isFeedbackSessionQuestionResponsesLoading={[Function Boolean]}
  isFeedbackSessionQuestionsLoading={[Function Boolean]}
  isModerationHintExpanded="false"
  isSavingResponses="false"
  isSubmissionFormsDisabled="false"
  loggedInUser=""
  moderatedPerson=""
  moderatedQuestionId=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  pageScrollService={[Function PageScrollService]}
  personEmail=""
  personName=""
  previewAsPerson=""
  questionSubmissionForms={[Function Array]}
  regKey={[Function String]}
  retryAttempts="0"
  route={[Function Object]}
  router={[Function Router]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are submitting feedback as 
          <mark>
            <b>
              
            </b>
          </mark>
          . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (optional). 
        </div>
      </div>
    </div>
  </div><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <i
          class="fas fa-exclamation-circle"
        />
         Note that you can use the Submit button to save responses already entered, and continue to answer remaining questions after that. You may also edit your submission any number of times before the closing time of this session. 
      </div>
    </div>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><tm-loading-retry>
    
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load questions
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry
      </button>
    </div>
    
  </tm-loading-retry>
</tm-session-submission-page>
`;

exports[`SessionSubmissionPageComponent should snap when saving responses 1`] = `
<tm-session-submission-page
  FeedbackSessionSubmissionStatus={[Function Object]}
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  commentService={[Function FeedbackResponseCommentService]}
  courseId={[Function String]}
  document={[Function Document]}
  feedbackQuestionsService={[Function FeedbackQuestionsService]}
  feedbackResponsesService={[Function FeedbackResponsesService]}
  feedbackSessionInstructions=""
  feedbackSessionName={[Function String]}
  feedbackSessionSubmissionStatus={[Function String]}
  feedbackSessionTimezone=""
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionQuestionsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionLoading={[Function Boolean]}
  isFeedbackSessionQuestionResponsesLoading={[Function Boolean]}
  isFeedbackSessionQuestionsLoading={[Function Boolean]}
  isModerationHintExpanded="false"
  isSavingResponses={[Function Boolean]}
  isSubmissionFormsDisabled="false"
  loggedInUser=""
  moderatedPerson=""
  moderatedQuestionId=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  pageScrollService={[Function PageScrollService]}
  personEmail=""
  personName=""
  previewAsPerson=""
  questionSubmissionForms={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are submitting feedback as 
          <mark>
            <b>
              
            </b>
          </mark>
          . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (optional). 
        </div>
      </div>
    </div>
  </div><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <i
          class="fas fa-exclamation-circle"
        />
         Note that you can use the Submit button to save responses already entered, and continue to answer remaining questions after that. You may also edit your submission any number of times before the closing time of this session. 
      </div>
    </div>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-submission-page>
`;

exports[`SessionSubmissionPageComponent should snap with default fields 1`] = `
<tm-session-submission-page
  FeedbackSessionSubmissionStatus={[Function Object]}
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  commentService={[Function FeedbackResponseCommentService]}
  courseId={[Function String]}
  document={[Function Document]}
  feedbackQuestionsService={[Function FeedbackQuestionsService]}
  feedbackResponsesService={[Function FeedbackResponsesService]}
  feedbackSessionInstructions=""
  feedbackSessionName={[Function String]}
  feedbackSessionSubmissionStatus={[Function String]}
  feedbackSessionTimezone=""
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionQuestionsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionLoading={[Function Boolean]}
  isFeedbackSessionQuestionResponsesLoading={[Function Boolean]}
  isFeedbackSessionQuestionsLoading={[Function Boolean]}
  isModerationHintExpanded="false"
  isSavingResponses="false"
  isSubmissionFormsDisabled="false"
  loggedInUser=""
  moderatedPerson=""
  moderatedQuestionId=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  pageScrollService={[Function PageScrollService]}
  personEmail=""
  personName=""
  previewAsPerson=""
  questionSubmissionForms={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are submitting feedback as 
          <mark>
            <b>
              
            </b>
          </mark>
          . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (optional). 
        </div>
      </div>
    </div>
  </div><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <i
          class="fas fa-exclamation-circle"
        />
         Note that you can use the Submit button to save responses already entered, and continue to answer remaining questions after that. You may also edit your submission any number of times before the closing time of this session. 
      </div>
    </div>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-submission-page>
`;

exports[`SessionSubmissionPageComponent should snap with feedback session and user details 1`] = `
<tm-session-submission-page
  FeedbackSessionSubmissionStatus={[Function Object]}
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  commentService={[Function FeedbackResponseCommentService]}
  courseId={[Function String]}
  document={[Function Document]}
  feedbackQuestionsService={[Function FeedbackQuestionsService]}
  feedbackResponsesService={[Function FeedbackResponsesService]}
  feedbackSessionInstructions={[Function String]}
  feedbackSessionName={[Function String]}
  feedbackSessionSubmissionStatus={[Function String]}
  feedbackSessionTimezone=""
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime={[Function String]}
  formattedSessionOpeningTime={[Function String]}
  hasFeedbackSessionQuestionsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionLoading="false"
  isFeedbackSessionQuestionResponsesLoading={[Function Boolean]}
  isFeedbackSessionQuestionsLoading={[Function Boolean]}
  isModerationHintExpanded="false"
  isSavingResponses="false"
  isSubmissionFormsDisabled="false"
  loggedInUser={[Function String]}
  moderatedPerson=""
  moderatedQuestionId=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  pageScrollService={[Function PageScrollService]}
  personEmail={[Function String]}
  personName={[Function String]}
  previewAsPerson=""
  questionSubmissionForms={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        <div>
           You are submitting feedback as 
          <mark>
            <b>
              person name
            </b>
          </mark>
          . If you wish to link your Google account (logged-in-user) with this user, 
          <a
            href="#"
          >
            click here
          </a>
          . 
        </div>
        
      </div>
    </div>
  </div><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <i
          class="fas fa-exclamation-circle"
        />
         Note that you can use the Submit button to save responses already entered, and continue to answer remaining questions after that. You may also edit your submission any number of times before the closing time of this session. 
      </div>
    </div>
  </div><div
    class="card card-plain"
  >
    <div
      class="card-body"
    >
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Course ID:
          </b>
        </div>
        <div
          class="col-md-6"
          id="course-id"
        >
          test.exa-demo
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Session:
          </b>
        </div>
        <div
          class="col-md-6"
          id="fs-name"
        >
          First team feedback session
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Opening time:
          </b>
        </div>
        <div
          class="col-md-6"
          id="opening-time"
        >
          Sun, 01 Apr, 2012, 11:59 PM +08
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Closing time:
          </b>
        </div>
        <div
          class="col-md-6"
          id="closing-time"
        >
          Mon, 02 Apr, 2012, 11:59 PM +08
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Instructions:
          </b>
        </div>
        <div
          class="col-md-6"
          id="instructions"
        >
          Please give your feedback based on the following questions.
        </div>
      </div>
      <br />
    </div>
  </div><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-submission-page>
`;

exports[`SessionSubmissionPageComponent should snap with feedback session question submission forms 1`] = `
<tm-session-submission-page
  FeedbackSessionSubmissionStatus={[Function Object]}
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  commentService={[Function FeedbackResponseCommentService]}
  courseId={[Function String]}
  document={[Function Document]}
  feedbackQuestionsService={[Function FeedbackQuestionsService]}
  feedbackResponsesService={[Function FeedbackResponsesService]}
  feedbackSessionInstructions=""
  feedbackSessionName={[Function String]}
  feedbackSessionSubmissionStatus={[Function String]}
  feedbackSessionTimezone=""
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionQuestionsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionLoading="false"
  isFeedbackSessionQuestionResponsesLoading="false"
  isFeedbackSessionQuestionsLoading="false"
  isModerationHintExpanded="false"
  isSavingResponses="false"
  isSubmissionFormsDisabled="false"
  loggedInUser=""
  moderatedPerson=""
  moderatedQuestionId=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  pageScrollService={[Function PageScrollService]}
  personEmail=""
  personName=""
  previewAsPerson=""
  questionSubmissionForms={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are submitting feedback as 
          <mark>
            <b>
              
            </b>
          </mark>
          . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (optional). 
        </div>
      </div>
    </div>
  </div><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <i
          class="fas fa-exclamation-circle"
        />
         Note that you can use the Submit button to save responses already entered, and continue to answer remaining questions after that. You may also edit your submission any number of times before the closing time of this session. 
      </div>
    </div>
  </div><div
    class="card card-plain"
  >
    <div
      class="card-body"
    >
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Course ID:
          </b>
        </div>
        <div
          class="col-md-6"
          id="course-id"
        >
          CS3281
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Session:
          </b>
        </div>
        <div
          class="col-md-6"
          id="fs-name"
        >
          Feedback Session Name
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Opening time:
          </b>
        </div>
        <div
          class="col-md-6"
          id="opening-time"
        >
          
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Closing time:
          </b>
        </div>
        <div
          class="col-md-6"
          id="closing-time"
        >
          
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Instructions:
          </b>
        </div>
        <div
          class="col-md-6"
          id="instructions"
        />
      </div>
      <br />
    </div>
  </div><tm-loading-retry>
    
    
    <div>
      
      <tm-question-submission-form
        id="feedback-question-id-1"
      >
        <div
          class="card"
          id="question-submission-form"
        >
          <div
            class="card-header bg-primary text-white question-header"
          >
            <span
              id="question-details"
            >
              <b>
                Question 1: 
              </b>
              question brief
            </span>
          </div>
          <div
            class="card-body"
          >
            
            <div
              class="card mb-3"
            >
              <div
                class="card-header"
              >
                <b>
                  More details
                </b>
              </div>
              <div
                class="card-body"
                id="question-description"
              >
                question description
              </div>
            </div>
            <div
              class="card-body visibility-card"
            >
              <p
                class="text-secondary"
              >
                Only the following persons can see your responses: 
              </p>
              <ul
                class="text-secondary"
                id="visibility-list"
              >
                
                
                
                
                
                
                
                
                
                
                
                
                
                <li>
                   Other students in the course can see your response, but not the name of the recipient, or your name 
                </li>
                
                
                
                <li>
                   Instructors in this course can see your response, but not the name of the recipient, or your name 
                </li>
                
                
              </ul>
            </div>
            
            
            
            
            
            
            
            
            
            
            
            
            <p
              class="margin-top-15px"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The party being evaluated or given feedback to"
              >
                Evaluee/Recipient
              </span>
            </p>
            
            <div
              class="row"
            >
              <div
                class="evaluee-col col-12"
              >
                
                <div
                  class="row"
                >
                  
                  <div
                    class="col-12 margin-top-10px"
                  >
                    
                    <div
                      id="recipient-name-0"
                    >
                      <b>
                        Unknown 
                      </b>
                      <span>
                        (Team)
                      </span>
                    </div>
                    
                  </div>
                  <div
                    class="col-12 margin-top-10px indent"
                  >
                    
                    
                    
                    
                    
                    
                    <tm-mcq-question-edit-answer-form>
                      <tr>
                        <td>
                          
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-1recipient-identifier"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 1
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-1recipient-identifier"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 2
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-1recipient-identifier"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 3
                              </span>
                            </label>
                          </div>
                          
                        </td>
                      </tr>
                    </tm-mcq-question-edit-answer-form>
                    
                    
                    
                    
                  </div>
                  
                  <div
                    class="col-12 margin-bottom-20px margin-top-10px indent"
                    id="comment-section"
                  >
                    
                    <div>
                      <tm-comment-row>
                        
                        
                        <div
                          class="card"
                        >
                          <div
                            class="card-body"
                          >
                            <div
                              class="row comment-row"
                            >
                              <div
                                class="col-12"
                              >
                                
                                <span
                                  class="text-secondary"
                                  id="by-response-giver"
                                >
                                   Comment by response giver. 
                                </span>
                                
                                <i
                                  aria-hidden="true"
                                  class="fa fa-eye"
                                />
                                <div
                                  class="float-right"
                                >
                                  
                                  <button
                                    class="btn btn-outline-primary btn-sm"
                                    id="btn-edit-comment"
                                    ngbtooltip="Edit this comment"
                                    type="button"
                                  >
                                    <i
                                      class="fas fa-pencil-alt"
                                    />
                                  </button>
                                  
                                  
                                  <button
                                    class="btn btn-outline-primary btn-sm btn-margin-left"
                                    id="btn-delete-comment"
                                    ngbtooltip="Delete this comment"
                                    type="button"
                                  >
                                    <i
                                      class="fas fa-trash"
                                    />
                                  </button>
                                  
                                </div>
                              </div>
                              <div
                                class="col-12"
                                id="comment-text"
                              >
                                comment text
                              </div>
                            </div>
                          </div>
                        </div>
                      </tm-comment-row>
                      
                    </div>
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-12 constraint-margins"
            >
              
              
            </div>
            
            <div
              class="alert alert-warning"
              role="alert"
            >
              
              
              
            </div>
          </div>
        </div>
      </tm-question-submission-form>
      <tm-question-submission-form
        id="feedback-question-id-2"
      >
        <div
          class="card"
          id="question-submission-form"
        >
          <div
            class="card-header bg-primary text-white question-header"
          >
            <span
              id="question-details"
            >
              <b>
                Question 2: 
              </b>
              question brief
            </span>
          </div>
          <div
            class="card-body"
          >
            
            <div
              class="card mb-3"
            >
              <div
                class="card-header"
              >
                <b>
                  More details
                </b>
              </div>
              <div
                class="card-body"
                id="question-description"
              >
                question description
              </div>
            </div>
            <div
              class="card-body visibility-card"
            >
              <p
                class="text-secondary"
              >
                Only the following persons can see your responses: 
              </p>
              <ul
                class="text-secondary"
                id="visibility-list"
              >
                
                
                
                
                
                
                
                <li>
                   Your team members can see your response, but not the name of the recipient, or your name 
                </li>
                
                
                
                
                
                
                
                
                
                <li>
                   Instructors in this course can see your response, but not the name of the recipient, or your name 
                </li>
                
                
              </ul>
            </div>
            
            
            <tm-text-question-instruction />
            
            
            
            <tm-text-question-constraint />
            
            
            
            
            
            
            
            <p
              class="margin-top-15px"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The party being evaluated or given feedback to"
              >
                Evaluee/Recipient
              </span>
            </p>
            
            <div
              class="row"
            >
              <div
                class="evaluee-col col-12"
              >
                
                <div
                  class="row"
                >
                  
                  <div
                    class="col-12 margin-top-10px"
                  >
                    
                    <div
                      id="recipient-name-0"
                    >
                      <b>
                        Unknown 
                      </b>
                      <span>
                        (Instructor)
                      </span>
                    </div>
                    
                  </div>
                  <div
                    class="col-12 margin-top-10px indent"
                  >
                    
                    
                    <tm-text-question-edit-answer-form>
                      
                      <div
                        class="plain-text-area"
                      >
                        <textarea
                          class="ng-untouched ng-pristine ng-valid"
                        />
                      </div>
                      
                      <div
                        class="margin-top-7px text-secondary text-right"
                      >
                        
                        
                      </div>
                    </tm-text-question-edit-answer-form>
                    
                    
                    
                    
                    
                    
                    
                    
                  </div>
                  
                </div>
              </div>
            </div>
            <div
              class="col-12 constraint-margins"
            >
              
              
            </div>
            
            <div
              class="alert alert-warning"
              role="alert"
            >
              
              
              
            </div>
          </div>
        </div>
      </tm-question-submission-form>
      <tm-question-submission-form
        id="feedback-question-id-3"
      >
        <div
          class="card"
          id="question-submission-form"
        >
          <div
            class="card-header bg-primary text-white question-header"
          >
            <span
              id="question-details"
            >
              <b>
                Question 3: 
              </b>
              question brief
            </span>
          </div>
          <div
            class="card-body"
          >
            
            <div
              class="card mb-3"
            >
              <div
                class="card-header"
              >
                <b>
                  More details
                </b>
              </div>
              <div
                class="card-body"
                id="question-description"
              >
                question description
              </div>
            </div>
            <div
              class="card-body visibility-card"
            >
              <p
                class="text-secondary"
              >
                Only the following persons can see your responses: 
              </p>
              <ul
                class="text-secondary"
                id="visibility-list"
              >
                
                
                
                
                <li>
                   The receiving teams can see your response, the name of the recipient, and your name 
                </li>
                
                
                
                
                
                
                
                
                
                
                
                
                <li>
                   Instructors in this course can see your response, the name of the recipient, and your name 
                </li>
                
                
              </ul>
            </div>
            
            
            
            
            
            
            
            
            
            
            
            
            <p
              class="margin-top-15px"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The party being evaluated or given feedback to"
              >
                Evaluee/Recipient
              </span>
            </p>
            
            <div
              class="row"
            >
              <div
                class="evaluee-col col-12"
              >
                
                <div
                  class="row"
                >
                  
                  <div
                    class="col-12 margin-top-10px"
                  >
                    
                    <div
                      id="recipient-name-0"
                    >
                      <b>
                        Barry Harris 
                      </b>
                      <span>
                        (Team)
                      </span>
                    </div>
                    
                  </div>
                  <div
                    class="col-12 margin-top-10px indent"
                  >
                    
                    
                    
                    
                    
                    
                    <tm-mcq-question-edit-answer-form>
                      <tr>
                        <td>
                          
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-3barry-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 1
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-3barry-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 2
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-3barry-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 3
                              </span>
                            </label>
                          </div>
                          
                        </td>
                      </tr>
                    </tm-mcq-question-edit-answer-form>
                    
                    
                    
                    
                  </div>
                  
                  <div
                    class="col-12 margin-bottom-20px margin-top-10px indent"
                    id="comment-section"
                  >
                    
                    <div
                      style="display: inline-block;"
                    >
                      
                      <button
                        class="btn btn-light btn-sm"
                        id="btn-add-comment"
                      >
                        <i
                          class="fas fa-comment"
                        />
                         [Optional] Comment on your response 
                      </button>
                    </div>
                    
                    
                    
                  </div>
                </div>
                <div
                  class="row"
                >
                  
                  <div
                    class="col-12 margin-top-10px"
                  >
                    
                    <div
                      id="recipient-name-1"
                    >
                      <b>
                        Gene Harris 
                      </b>
                      <span>
                        (Team)
                      </span>
                    </div>
                    
                  </div>
                  <div
                    class="col-12 margin-top-10px indent"
                  >
                    
                    
                    
                    
                    
                    
                    <tm-mcq-question-edit-answer-form>
                      <tr>
                        <td>
                          
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-3gene-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 1
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-3gene-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 2
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                name="mcq-feedback-question-id-3gene-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 3
                              </span>
                            </label>
                          </div>
                          
                        </td>
                      </tr>
                    </tm-mcq-question-edit-answer-form>
                    
                    
                    
                    
                  </div>
                  
                  <div
                    class="col-12 margin-bottom-20px margin-top-10px indent"
                    id="comment-section"
                  >
                    
                    <div
                      style="display: inline-block;"
                    >
                      
                      <button
                        class="btn btn-light btn-sm"
                        id="btn-add-comment"
                      >
                        <i
                          class="fas fa-comment"
                        />
                         [Optional] Comment on your response 
                      </button>
                    </div>
                    
                    
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-12 constraint-margins"
            >
              
              
            </div>
            
          </div>
        </div>
      </tm-question-submission-form>
      <br />
      
      
      <div
        class="row"
      >
        <div
          class="col-12 text-center"
        >
          <button
            class="btn btn-success"
            id="btn-submit"
            ngbtooltip="You can save your responses at any time and come back later to continue."
            type="submit"
          >
            
            Submit Feedback
          </button>
        </div>
      </div>
    </div>
    
    
  </tm-loading-retry>
</tm-session-submission-page>
`;

exports[`SessionSubmissionPageComponent should snap with feedback session question submission forms when disabled 1`] = `
<tm-session-submission-page
  FeedbackSessionSubmissionStatus={[Function Object]}
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  commentService={[Function FeedbackResponseCommentService]}
  courseId={[Function String]}
  document={[Function Document]}
  feedbackQuestionsService={[Function FeedbackQuestionsService]}
  feedbackResponsesService={[Function FeedbackResponsesService]}
  feedbackSessionInstructions=""
  feedbackSessionName={[Function String]}
  feedbackSessionSubmissionStatus={[Function String]}
  feedbackSessionTimezone=""
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionQuestionsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionLoading="false"
  isFeedbackSessionQuestionResponsesLoading="false"
  isFeedbackSessionQuestionsLoading="false"
  isModerationHintExpanded="false"
  isSavingResponses="false"
  isSubmissionFormsDisabled={[Function Boolean]}
  loggedInUser=""
  moderatedPerson=""
  moderatedQuestionId=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  pageScrollService={[Function PageScrollService]}
  personEmail=""
  personName=""
  previewAsPerson=""
  questionSubmissionForms={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are submitting feedback as 
          <mark>
            <b>
              
            </b>
          </mark>
          . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (optional). 
        </div>
      </div>
    </div>
  </div><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <i
          class="fas fa-exclamation-circle"
        />
         Note that you can use the Submit button to save responses already entered, and continue to answer remaining questions after that. You may also edit your submission any number of times before the closing time of this session. 
      </div>
    </div>
  </div><div
    class="card card-plain"
  >
    <div
      class="card-body"
    >
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Course ID:
          </b>
        </div>
        <div
          class="col-md-6"
          id="course-id"
        >
          CS3281
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Session:
          </b>
        </div>
        <div
          class="col-md-6"
          id="fs-name"
        >
          Feedback Session Name
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Opening time:
          </b>
        </div>
        <div
          class="col-md-6"
          id="opening-time"
        >
          
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Closing time:
          </b>
        </div>
        <div
          class="col-md-6"
          id="closing-time"
        >
          
        </div>
      </div>
      <br />
      <div
        class="row text-center"
      >
        <div
          class="col-md-3"
        >
          <b>
            Instructions:
          </b>
        </div>
        <div
          class="col-md-6"
          id="instructions"
        />
      </div>
      <br />
    </div>
  </div><tm-loading-retry>
    
    
    <div>
      
      <tm-question-submission-form
        id="feedback-question-id-1"
      >
        <div
          class="card"
          id="question-submission-form"
        >
          <div
            class="card-header bg-primary text-white question-header"
          >
            <span
              id="question-details"
            >
              <b>
                Question 1: 
              </b>
              question brief
            </span>
          </div>
          <div
            class="card-body"
          >
            
            <div
              class="card mb-3"
            >
              <div
                class="card-header"
              >
                <b>
                  More details
                </b>
              </div>
              <div
                class="card-body"
                id="question-description"
              >
                question description
              </div>
            </div>
            <div
              class="card-body visibility-card"
            >
              <p
                class="text-secondary"
              >
                Only the following persons can see your responses: 
              </p>
              <ul
                class="text-secondary"
                id="visibility-list"
              >
                
                
                
                
                
                
                
                
                
                
                
                
                
                <li>
                   Other students in the course can see your response, but not the name of the recipient, or your name 
                </li>
                
                
                
                <li>
                   Instructors in this course can see your response, but not the name of the recipient, or your name 
                </li>
                
                
              </ul>
            </div>
            
            
            
            
            
            
            
            
            
            
            
            
            <p
              class="margin-top-15px"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The party being evaluated or given feedback to"
              >
                Evaluee/Recipient
              </span>
            </p>
            
            <div
              class="row"
            >
              <div
                class="evaluee-col col-12"
              >
                
                <div
                  class="row"
                >
                  
                  <div
                    class="col-12 margin-top-10px"
                  >
                    
                    <div
                      id="recipient-name-0"
                    >
                      <b>
                        Unknown 
                      </b>
                      <span>
                        (Team)
                      </span>
                    </div>
                    
                  </div>
                  <div
                    class="col-12 margin-top-10px indent"
                  >
                    
                    
                    
                    
                    
                    
                    <tm-mcq-question-edit-answer-form>
                      <tr>
                        <td>
                          
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-1recipient-identifier"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 1
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-1recipient-identifier"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 2
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-1recipient-identifier"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 3
                              </span>
                            </label>
                          </div>
                          
                        </td>
                      </tr>
                    </tm-mcq-question-edit-answer-form>
                    
                    
                    
                    
                  </div>
                  
                  <div
                    class="col-12 margin-bottom-20px margin-top-10px indent"
                    id="comment-section"
                  >
                    
                    <div>
                      <tm-comment-row>
                        
                        
                        <div
                          class="card"
                        >
                          <div
                            class="card-body"
                          >
                            <div
                              class="row comment-row"
                            >
                              <div
                                class="col-12"
                              >
                                
                                <span
                                  class="text-secondary"
                                  id="by-response-giver"
                                >
                                   Comment by response giver. 
                                </span>
                                
                                <i
                                  aria-hidden="true"
                                  class="fa fa-eye"
                                />
                                <div
                                  class="float-right"
                                >
                                  
                                  <button
                                    class="btn btn-outline-primary btn-sm"
                                    disabled=""
                                    id="btn-edit-comment"
                                    ngbtooltip="Edit this comment"
                                    type="button"
                                  >
                                    <i
                                      class="fas fa-pencil-alt"
                                    />
                                  </button>
                                  
                                  
                                  <button
                                    class="btn btn-outline-primary btn-sm btn-margin-left"
                                    disabled=""
                                    id="btn-delete-comment"
                                    ngbtooltip="Delete this comment"
                                    type="button"
                                  >
                                    <i
                                      class="fas fa-trash"
                                    />
                                  </button>
                                  
                                </div>
                              </div>
                              <div
                                class="col-12"
                                id="comment-text"
                              >
                                comment text
                              </div>
                            </div>
                          </div>
                        </div>
                      </tm-comment-row>
                      
                    </div>
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-12 constraint-margins"
            >
              
              
            </div>
            
            <div
              class="alert alert-warning"
              role="alert"
            >
              
              
              
            </div>
          </div>
        </div>
      </tm-question-submission-form>
      <tm-question-submission-form
        id="feedback-question-id-2"
      >
        <div
          class="card"
          id="question-submission-form"
        >
          <div
            class="card-header bg-primary text-white question-header"
          >
            <span
              id="question-details"
            >
              <b>
                Question 2: 
              </b>
              question brief
            </span>
          </div>
          <div
            class="card-body"
          >
            
            <div
              class="card mb-3"
            >
              <div
                class="card-header"
              >
                <b>
                  More details
                </b>
              </div>
              <div
                class="card-body"
                id="question-description"
              >
                question description
              </div>
            </div>
            <div
              class="card-body visibility-card"
            >
              <p
                class="text-secondary"
              >
                Only the following persons can see your responses: 
              </p>
              <ul
                class="text-secondary"
                id="visibility-list"
              >
                
                
                
                
                
                
                
                <li>
                   Your team members can see your response, but not the name of the recipient, or your name 
                </li>
                
                
                
                
                
                
                
                
                
                <li>
                   Instructors in this course can see your response, but not the name of the recipient, or your name 
                </li>
                
                
              </ul>
            </div>
            
            
            <tm-text-question-instruction />
            
            
            
            <tm-text-question-constraint />
            
            
            
            
            
            
            
            <p
              class="margin-top-15px"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The party being evaluated or given feedback to"
              >
                Evaluee/Recipient
              </span>
            </p>
            
            <div
              class="row"
            >
              <div
                class="evaluee-col col-12"
              >
                
                <div
                  class="row"
                >
                  
                  <div
                    class="col-12 margin-top-10px"
                  >
                    
                    <div
                      id="recipient-name-0"
                    >
                      <b>
                        Unknown 
                      </b>
                      <span>
                        (Instructor)
                      </span>
                    </div>
                    
                  </div>
                  <div
                    class="col-12 margin-top-10px indent"
                  >
                    
                    
                    <tm-text-question-edit-answer-form>
                      
                      <div
                        class="plain-text-area"
                      >
                        <textarea
                          class="ng-untouched ng-pristine ng-valid"
                        />
                      </div>
                      
                      <div
                        class="margin-top-7px text-secondary text-right"
                      >
                        
                        
                      </div>
                    </tm-text-question-edit-answer-form>
                    
                    
                    
                    
                    
                    
                    
                    
                  </div>
                  
                </div>
              </div>
            </div>
            <div
              class="col-12 constraint-margins"
            >
              
              
            </div>
            
            <div
              class="alert alert-warning"
              role="alert"
            >
              
              
              
            </div>
          </div>
        </div>
      </tm-question-submission-form>
      <tm-question-submission-form
        id="feedback-question-id-3"
      >
        <div
          class="card"
          id="question-submission-form"
        >
          <div
            class="card-header bg-primary text-white question-header"
          >
            <span
              id="question-details"
            >
              <b>
                Question 3: 
              </b>
              question brief
            </span>
          </div>
          <div
            class="card-body"
          >
            
            <div
              class="card mb-3"
            >
              <div
                class="card-header"
              >
                <b>
                  More details
                </b>
              </div>
              <div
                class="card-body"
                id="question-description"
              >
                question description
              </div>
            </div>
            <div
              class="card-body visibility-card"
            >
              <p
                class="text-secondary"
              >
                Only the following persons can see your responses: 
              </p>
              <ul
                class="text-secondary"
                id="visibility-list"
              >
                
                
                
                
                <li>
                   The receiving teams can see your response, the name of the recipient, and your name 
                </li>
                
                
                
                
                
                
                
                
                
                
                
                
                <li>
                   Instructors in this course can see your response, the name of the recipient, and your name 
                </li>
                
                
              </ul>
            </div>
            
            
            
            
            
            
            
            
            
            
            
            
            <p
              class="margin-top-15px"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="The party being evaluated or given feedback to"
              >
                Evaluee/Recipient
              </span>
            </p>
            
            <div
              class="row"
            >
              <div
                class="evaluee-col col-12"
              >
                
                <div
                  class="row"
                >
                  
                  <div
                    class="col-12 margin-top-10px"
                  >
                    
                    <div
                      id="recipient-name-0"
                    >
                      <b>
                        Barry Harris 
                      </b>
                      <span>
                        (Team)
                      </span>
                    </div>
                    
                  </div>
                  <div
                    class="col-12 margin-top-10px indent"
                  >
                    
                    
                    
                    
                    
                    
                    <tm-mcq-question-edit-answer-form>
                      <tr>
                        <td>
                          
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-3barry-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 1
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-3barry-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 2
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-3barry-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 3
                              </span>
                            </label>
                          </div>
                          
                        </td>
                      </tr>
                    </tm-mcq-question-edit-answer-form>
                    
                    
                    
                    
                  </div>
                  
                  <div
                    class="col-12 margin-bottom-20px margin-top-10px indent"
                    id="comment-section"
                  >
                    
                    <div
                      style="display: inline-block;"
                    >
                      
                      <button
                        class="btn btn-light btn-sm"
                        disabled=""
                        id="btn-add-comment"
                      >
                        <i
                          class="fas fa-comment"
                        />
                         [Optional] Comment on your response 
                      </button>
                    </div>
                    
                    
                    
                  </div>
                </div>
                <div
                  class="row"
                >
                  
                  <div
                    class="col-12 margin-top-10px"
                  >
                    
                    <div
                      id="recipient-name-1"
                    >
                      <b>
                        Gene Harris 
                      </b>
                      <span>
                        (Team)
                      </span>
                    </div>
                    
                  </div>
                  <div
                    class="col-12 margin-top-10px indent"
                  >
                    
                    
                    
                    
                    
                    
                    <tm-mcq-question-edit-answer-form>
                      <tr>
                        <td>
                          
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-3gene-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 1
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-3gene-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 2
                              </span>
                            </label>
                          </div>
                          <div
                            class="radio"
                          >
                            <label
                              class="margin-right-15px"
                            >
                              <input
                                class="margin-right-15px"
                                disabled=""
                                name="mcq-feedback-question-id-3gene-harris-id"
                                type="radio"
                              />
                              <span
                                class="option-text"
                              >
                                choice 3
                              </span>
                            </label>
                          </div>
                          
                        </td>
                      </tr>
                    </tm-mcq-question-edit-answer-form>
                    
                    
                    
                    
                  </div>
                  
                  <div
                    class="col-12 margin-bottom-20px margin-top-10px indent"
                    id="comment-section"
                  >
                    
                    <div
                      style="display: inline-block;"
                    >
                      
                      <button
                        class="btn btn-light btn-sm"
                        disabled=""
                        id="btn-add-comment"
                      >
                        <i
                          class="fas fa-comment"
                        />
                         [Optional] Comment on your response 
                      </button>
                    </div>
                    
                    
                    
                  </div>
                </div>
              </div>
            </div>
            <div
              class="col-12 constraint-margins"
            >
              
              
            </div>
            
          </div>
        </div>
      </tm-question-submission-form>
      <br />
      
      
      <div
        class="row"
      >
        <div
          class="col-12 text-center"
        >
          <button
            class="btn btn-success"
            disabled=""
            id="btn-submit"
            ngbtooltip="You can save your responses at any time and come back later to continue."
            type="submit"
          >
            
            Submit Feedback
          </button>
        </div>
      </div>
    </div>
    
    
  </tm-loading-retry>
</tm-session-submission-page>
`;

exports[`SessionSubmissionPageComponent should snap with user that is logged in and using session link 1`] = `
<tm-session-submission-page
  FeedbackSessionSubmissionStatus={[Function Object]}
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  commentService={[Function FeedbackResponseCommentService]}
  courseId={[Function String]}
  document={[Function Document]}
  feedbackQuestionsService={[Function FeedbackQuestionsService]}
  feedbackResponsesService={[Function FeedbackResponsesService]}
  feedbackSessionInstructions=""
  feedbackSessionName={[Function String]}
  feedbackSessionSubmissionStatus={[Function String]}
  feedbackSessionTimezone=""
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionQuestionsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionLoading={[Function Boolean]}
  isFeedbackSessionQuestionResponsesLoading={[Function Boolean]}
  isFeedbackSessionQuestionsLoading={[Function Boolean]}
  isModerationHintExpanded="false"
  isSavingResponses="false"
  isSubmissionFormsDisabled="false"
  loggedInUser={[Function String]}
  moderatedPerson=""
  moderatedQuestionId=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  pageScrollService={[Function PageScrollService]}
  personEmail=""
  personName={[Function String]}
  previewAsPerson=""
  questionSubmissionForms={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        <div>
           You are submitting feedback as 
          <mark>
            <b>
              alice
            </b>
          </mark>
          . If you wish to link your Google account (alice) with this user, 
          <a
            href="#"
          >
            click here
          </a>
          . 
        </div>
        
      </div>
    </div>
  </div><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <i
          class="fas fa-exclamation-circle"
        />
         Note that you can use the Submit button to save responses already entered, and continue to answer remaining questions after that. You may also edit your submission any number of times before the closing time of this session. 
      </div>
    </div>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-submission-page>
`;

exports[`SessionSubmissionPageComponent should snap with user that is not logged in and using session link 1`] = `
<tm-session-submission-page
  FeedbackSessionSubmissionStatus={[Function Object]}
  Intent={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  commentService={[Function FeedbackResponseCommentService]}
  courseId={[Function String]}
  document={[Function Document]}
  feedbackQuestionsService={[Function FeedbackQuestionsService]}
  feedbackResponsesService={[Function FeedbackResponsesService]}
  feedbackSessionInstructions=""
  feedbackSessionName={[Function String]}
  feedbackSessionSubmissionStatus={[Function String]}
  feedbackSessionTimezone=""
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionQuestionsLoadingFailed="false"
  instructorService={[Function InstructorService]}
  intent={[Function String]}
  isFeedbackSessionLoading={[Function Boolean]}
  isFeedbackSessionQuestionResponsesLoading={[Function Boolean]}
  isFeedbackSessionQuestionsLoading={[Function Boolean]}
  isModerationHintExpanded="false"
  isSavingResponses="false"
  isSubmissionFormsDisabled="false"
  loggedInUser=""
  moderatedPerson=""
  moderatedQuestionId=""
  navigationService={[Function NavigationService]}
  ngbModal={[Function NgbModal]}
  pageScrollService={[Function PageScrollService]}
  personEmail=""
  personName={[Function String]}
  previewAsPerson=""
  questionSubmissionForms={[Function Array]}
  regKey={[Function String]}
  retryAttempts={[Function Number]}
  route={[Function Object]}
  router={[Function Router]}
  simpleModalService={[Function SimpleModalService]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  timezoneService={[Function TimezoneService]}
>
  <div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        
        
        <div>
           You are submitting feedback as 
          <mark>
            <b>
              alice
            </b>
          </mark>
          . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            login using a Google account
          </a>
           (optional). 
        </div>
      </div>
    </div>
  </div><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <i
          class="fas fa-exclamation-circle"
        />
         Note that you can use the Submit button to save responses already entered, and continue to answer remaining questions after that. You may also edit your submission any number of times before the closing time of this session. 
      </div>
    </div>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><tm-loading-retry>
    
    
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    
    
  </tm-loading-retry>
</tm-session-submission-page>
`;
